components/gatekeeper-constraints/explicit-gateway-hosts/samples/wildcard/gateway-allow.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-gateway
  namespace: my-ns
spec:
  selector:
    app: my-gateway-controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "bookinfo.example.com"
    - "./bookinfo.example.com"
    - "my-ns/bookinfo.example.com"
